@@ -12,6 +12,7 @@ v0.13 (β) - 2016-xx-xx
 - Trends are always shown in UTC (#76).
 - Squash migrations (#31).
 - Display 'electricity returned' graph in dashboard (#81).
+- Optional gas (and electricity returned) capabilities tracking (#70).
 - 
 
 
